--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -91,6 +91,10 @@
 					<li><a href="{{ site.url }}/posts/">All Posts</a></li>
 					<li><a href="{{ site.url }}/tags/">All Tags</a></li>
 				</ul>
+				<a href="#">Projects</a>
+				<ul class="dl-submenu">
+					<li><a href="{{site.url}}/projects/">All Projects</a></li>
+				</ul>
 			</li>
 			{% for link in site.data.navigation %}
 		    {% if link.url contains 'http' %}
